
  Build:

  - Spot is now built in C++17 mode, so you need at least GCC 7 or
    clang 5 to compile it.  The current versions of all major linux
    distributions ship with at least GCC 7.4, so this should not be a
    problem.  There is also an --enable-c++20 option to configure in
    case you want to force a build of Spot in C++20 mode.

  Command-line tools:

  - ltlsynt learned --print-game-hoa to output its internal parity
    game in the HOA format (with an extension described below).

  - ltlsynt --aiger option now takes an optional argument indicating
    how the bdd and states are to be encoded in the aiger output.
    The option has to be given in the form
    ite|isop|both[+ud][+dc][+sub0|sub1|sub2] where the first
    only obligatory argument decides whether "if-then-else" ("ite")
    or irreducible-sum-of-products ("isop") is to be used.
    "both" executes both strategies and retains the smaller circuits.
    The additional options are for fine-tuning. "ud" also encodes the
    dual of the conditions and retains the smaller circuits.
    "dc" computes if for some inputs we do not care whether the
    output is high or low and try to use this information to compute
    a smaller circuit. "subX" indicates different strategies to find
    common subexpressions, with "sub0" indicating no extra computations.

  - ltlsynt --verify checks the computed strategy or aiger circuit
    against the specification.

  - ltlsynt -x "specification-decomposition" determines whether or not
    the algorithm should try to decompose the formula into subformulas
    and generate a strategy for each subformula before recombining them
    into a circuit.

  - ltlsynt -x "minimization-level=[0-5]" determines how to minimize
    the strategy (a monitor). 0, no minimization; 1, regular DFA
    minimization; 2, signature based minimization with
    output assignement; 3, SAT based minimization; 4, 1 then 3;
    5, 2 then 3.
